force-app/main/default/objects/project__c/fields/clent_name__c.field-meta.xml
<CustomField>
    <fullName>clent_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>client_name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>projects1</relationshipName>
    <type>Lookup</type>
</CustomField>