force-app/main/default/objects/project__c/fields/project_description__c.field-meta.xml
<CustomField>
    <fullName>project_description__c</fullName>
    <label>project description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>