force-app/main/default/objects/project__c/fields/project_end_date__c.field-meta.xml
<CustomField>
    <fullName>project_end_date__c</fullName>
    <label>project end date</label>
    <type>Date</type>
</CustomField>