force-app/main/default/objects/project__c/fields/project_start_date__c.field-meta.xml
<CustomField>
    <fullName>project_start_date__c</fullName>
    <label>project start date</label>
    <type>Date</type>
</CustomField>