force-app/main/default/objects/project__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>SALESFORCE</fullName>
            </value>
            <value>
                <fullName>PYTHON</fullName>
            </value>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>DOT NET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>